--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0"
-        />
-        <link
-            rel="shortcut icon"
-            href="favicon-light.svg"
-            type="image/svg+xml"
-            media="(prefers-color-scheme: light)"
-        />
-        <link
-            rel="shortcut icon"
-            href="favicon-dark.svg"
-            type="image/svg+xml"
-            media="(prefers-color-scheme: dark)"
-        />
-        <title>Dashboard UI Design | XD Code</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script
-            type="module"
-            src="/src/main.jsx"
-        ></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon-light.svg" type="image/svg+xml" media="(prefers-color-scheme: light)" />
+    <link rel="shortcut icon" href="favicon-dark.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)" />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+    <title>Dashboard UI Design | XD Code</title>
+
+</head>
+
+<body class="font-outfit">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
